--- a/Raul/static/Raul/CSS/landingCSS.css
+++ b/Raul/static/Raul/CSS/landingCSS.css
@@ -4,38 +4,92 @@ body{
     height:100vh;
     font-family: 'Roboto Condensed', sans-serif;
     overflow-x: hidden;
-    display:flex;
-    flex-wrap: wrap-reverse;
     justify-items: center;
     align-items: center;
-    background-color: grey;
+    background-color:#595959;
+}
+
+.bigContainer{
+    display: flexbox;
+    flex-direction: row;
+    height:100vh;
+    z-index: 4;
+}
+
+.backgroundText{
+    position: absolute;
+    justify-items: center;
+    top:120px;
+    left:0px;
+    text-align: center;
+    align-items: center;
+    z-index: -1;   
+    display: none;
+    transition: 0.4s ease-in-out;
+}
+
+.backgroundText figcaption{
+    justify-items: center;
+    font-size: 15em;
+    font-weight: bolder;
+    opacity: 0.4;
+    color:rgba(0,0,0,0.5);
+    transition: ease-in-out;
+    letter-spacing: 50px;
+    
+}
+
+.backgroundText2{
+    position: absolute;
+    justify-items: center;
+    top:160px;
+    left:160px;
+    text-align: center;
+    align-items: center;
+    z-index: -2;   
+    display: none;
+    transition: 0.4s ease-in-out;
+}
+
+.backgroundText2 figcaption{
+    justify-items: center;
+    font-size: 25em;
+    font-weight: bolder;
+    opacity: 0.5;
+    color:rgba(0,0,0,0.5);
+    transition: ease-in-out;
+    letter-spacing: 60px;
+    
+}
+
+#cafeBanner{
+    transition: 0.4s ease-in-out;
+}
+
+#raulBanner{
+    transition: 0.4s ease-in-out;
 }
 
 a{
    overflow: hidden;
    text-emphasis: none;
-   width: 30%;
-   height:70%;
    margin-left:auto;
    margin-right:auto;
 }
 
 a .container{
-    width:80%;
-    height:100%;
+    width:30%;
+    height:25%;
     overflow: hidden;
     margin-left:auto;
     margin-right: auto;
-    flex-direction: column;
+    padding-top:50px;
     transition: 0.5s ease-in-out;
+    z-index: 5;
 }
 
 a .container p{
-   background:whitesmoke;
-   position: fixed;
-   margin-top:12%;
-   opacity: 0.7;
-   transition: 0.5s ease-in-out;
+    display: none;
 }
 
 a #raul{
@@ -75,9 +129,17 @@ a .container video{
 }
 
 a .container:hover{
-    width:82%;
+    width:35%;
     cursor: pointer;
-    box-shadow: 0px 0px 8px 1px black;
+}
+
+#cafeBanner:hover .backgroundText{
+    display: block;
+    transition: 0.4s ease-in-out;
+}
+
+#raulBanner:hover .backgroundText2{
+    display: block;
 }
 
 a .container:hover p{
