changes in landing.html

--- a/Raul/templates/Raul/landing.html
+++ b/Raul/templates/Raul/landing.html
@@ -26,7 +26,7 @@
         <a href="#">
             <div class="container" id="cafeBanner">
                 <p id= "cafe"><img src="{% static 'Raul/Images/cafe.png' %}" alt="logo"></p>
-                <img src="{% static 'Raul/Images/coffee.jpg' %}">
+                <img src="{% static 'Raul/Images/coffee.jpg' %}" id="bgPic">
                 <div class="backgroundText">
                     <figcaption>
                         CAFE FLOR
@@ -38,7 +38,7 @@
         <a href="{% url 'Raul-SecondHome' %}">
             <div class="container" id="raulBanner">
                 <p id ="raul"><img src="{% static 'Raul/Images/raullogo.png' %}" alt="logo"></p>
-                <img src="{% static 'Raul/Images/9.jpg' %}">
+                <img src="{% static 'Raul/Images/flowers.jpg' %}" id="bgPic">
                 <div class="backgroundText2">
                     <figcaption>
                         RAUL
@@ -50,8 +50,7 @@
         
         <a href="#">
             <div class="container">
-                <p id="third">F O <br>   U   R</p>
-                <img src="{% static 'Raul/Images/5.jpg' %}">
+                <img src="{% static 'Raul/Images/5.jpg' %}" id="bgPic">
             </div>
         </a>
 
