--- a/Raul/static/Raul/CSS/landingCSS.css
+++ b/Raul/static/Raul/CSS/landingCSS.css
@@ -89,29 +89,32 @@ a .container{
 }
 
 a .container p{
-    display: none;
+    position: fixed;
 }
 
 a #raul{
-   margin-left:1.5%;
-   width: 5.5em;
-   height:2.5em;
-   font-size: 3em;
-   padding:30px;
+   margin-left:4%;
+   width: 13.5em;
+   height: 8em;
+   padding:10px 30px;
+   z-index:99;
+   background-color: rgba(0,0,0,0.8);
 }
 
 a #raul img{
     align-self: center;
-    width: 50%;
-    margin-left: 1.2em;
+    width: 70%;
+    margin-left: 2em;
     margin-right: auto;
 }
 
 a #cafe{
-   margin-left:1.5%;
+   margin-left:4%;
    width:15em;
    height: 6em;
-   padding:40px;
+   padding:20px;
+   z-index:99;
+   background-color:rgba(0,0,0,0.9);
 }
 
 a #cafe img{
@@ -122,6 +125,7 @@ a #cafe img{
 
 a #third{
    margin-left:7.5%;
+   z-index:99;
 }
 
 a .container video{
@@ -131,6 +135,10 @@ a .container video{
 a .container:hover{
     width:35%;
     cursor: pointer;
+}
+
+a .container #bgPic{
+    filter: contrast(85%) brightness(70%);
 }
 
 #cafeBanner:hover .backgroundText{
