--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -164,7 +164,7 @@
         <div class = "dropDownMenu">
             <button class ="dropDownButton"> <a href = "{% url 'cat-view' 'Flowers' %}">florals</a> </button>
             <div class = "dropDownContent">
-                <a href = "#"> Phool </a>
+                <a href = "{% url 'register' %}"> Phool </a>
                 <a href = "#"> Podhe </a>
                 <a href = "#"> Gulaab </a>
                 <a href = "#"> Kamal </a>
