product variation started?

--- a/Raul/templates/Raul/cart.html
+++ b/Raul/templates/Raul/cart.html
@@ -40,6 +40,7 @@
                                                         <div class="product-info">
                                                             <div>Display: <span class="value">studded vase ${{item.product.price}}
 																	Metal Vase Bronze 5 H x 5 W</span></div>
+                                                            <div> <span class="value">{{item.notes}}</span></div>
                                                         </div>
                                                     </div>
                                                 </div>
