--- a/Raul/static/Raul/CSS/main.css
+++ b/Raul/static/Raul/CSS/main.css
@@ -1,10 +1,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap');
 
-  html,body{
+  body{
     margin:0;
     padding:0;
-    height:100%;font-family: 'Roboto', sans-serif;    
+    height:100%;font-family: 'Roboto', sans-serif;
     overflow-x: hidden;
     background-color: #595959;
     scroll-behavior: smooth;
@@ -52,7 +52,7 @@ figure a{
 
 figure a:hover{
     font-family: 'Roboto Condensed', sans-serif;
-    
+
 }
 
 figure p{
@@ -81,7 +81,7 @@ figure img{
 }
 
 .bannerHeading figcaption{
-    font-family: 'Roboto', serif; 
+    font-family: 'Roboto', serif;
     background-color: white;
 }
 
@@ -135,7 +135,7 @@ nav ul li a:hover{
 }
 
 ::-webkit-scrollbar-thumb {
-	background: transparent; 
+	background: transparent;
 	border-radius: 50px;
 	overflow: auto;
 }
@@ -186,13 +186,13 @@ nav ul li a:hover{
     to   { opacity: 1; }
 }
 
-@media only screen and (max-width:640px){    
-    
-    
+@media only screen and (max-width:640px){
+
+
     .feature{
         display: none;
     }
-    
+
     .headers{
         display: grid;
         height: 3.5em;
@@ -204,7 +204,7 @@ nav ul li a:hover{
         width: 25px;
         margin-top: 30%;
     }
-    
+
     .headers figcaption img{
         margin-left: 2em;
         margin-top:0.2em;
@@ -230,7 +230,7 @@ nav ul li a:hover{
     }
 
 
-    .bannerHead{    
+    .bannerHead{
         height: 100vh;
         width:100vw;
         overflow: hidden;
@@ -275,7 +275,7 @@ nav ul li a:hover{
         background-color: white;
         color:#595959;
         cursor: pointer;
-    }  
+    }
 
     .shopBanner{
         width:100%;
@@ -298,7 +298,7 @@ nav ul li a:hover{
     .shopBanner a:hover{
         color:orange;
     }
-    
+
     .furniture{
         height:50vh;
         width:100%;
@@ -354,7 +354,7 @@ nav ul li a:hover{
         display: none;
     }
 
-    
+
     .linksShop{
         display: none;
     }
@@ -382,11 +382,11 @@ nav ul li a:hover{
 
 @media only screen and (min-width:641px) and (max-width:768px){
 
-    
+
     .feature{
         display: none;
     }
-    
+
     .headers{
         display: grid;
         height: 4.5em;
@@ -398,7 +398,7 @@ nav ul li a:hover{
         width: 30px;
         margin-top: 45%;
     }
-    
+
     .headers figcaption img{
         margin-left: 2em;
         margin-top:0.2em;
@@ -423,7 +423,7 @@ nav ul li a:hover{
         width: 15px;
     }
 
-    .bannerHead{    
+    .bannerHead{
         height: 100vh;
         width:100vw;
         overflow: hidden;
@@ -468,7 +468,7 @@ nav ul li a:hover{
         background-color: white;
         color:#595959;
         cursor: pointer;
-    }  
+    }
 
     .shopBanner{
         width:100%;
@@ -491,7 +491,7 @@ nav ul li a:hover{
     .shopBanner a:hover{
         color:orange;
     }
-    
+
     .furniture{
         height:700px;
         width:100%;
@@ -550,7 +550,7 @@ nav ul li a:hover{
         display: none;
     }
 
-    
+
     .linksShop{
         display: none;
     }
@@ -578,11 +578,11 @@ nav ul li a:hover{
 
 @media only screen and (min-width:769px) and (max-width:1024px) /* Make adjustment for 800px ( divie 769px-1024px for better responsiveness)*/{
 
-    
+
     .feature{
         display: none;
     }
-    
+
     .headers{
         display: grid;
         height: 5em;
@@ -593,7 +593,7 @@ nav ul li a:hover{
         width: 40px;
         margin-top: 15%;
     }
-    
+
     .headers figcaption img{
         margin-left: 2em;
         margin-bottom:0.5em;
@@ -626,7 +626,7 @@ nav ul li a:hover{
         display: none;
     }
 
-    .bannerHead{    
+    .bannerHead{
         height: 100vh;
         width:100vw;
         overflow: hidden;
@@ -773,14 +773,14 @@ nav ul li a:hover{
     .staticImage{
         width:90%;
     }
-    
+
     .textMiddle{
         transition: 0.3s ease-in-out;
         opacity: 0;
         position: absolute;
         top:50%;
         right:10%;
-        text-align: center; 
+        text-align: center;
         z-index: 1;
     }
 
@@ -790,8 +790,8 @@ nav ul li a:hover{
         font-size: 5em;
         font-family: 'Roboto Condensed';
         background-color: white;
-        color:black;  
-        
+        color:black;
+
     }
 
     #Lighting{
@@ -824,7 +824,7 @@ nav ul li a:hover{
 
 @media only screen and (min-width:1025px) and (max-width:1200px){
 
-    
+
 
     nav{
         display: none;
@@ -948,7 +948,7 @@ nav ul li a:hover{
         text-decoration: none;
         padding:30px;
         text-align: center;
-        
+
     }
 
     .dropDownContent a:hover{
@@ -980,7 +980,7 @@ nav ul li a:hover{
     }
 
 
-    .bannerHead{    
+    .bannerHead{
         height: 100vh;
         width:100vw;
         overflow: hidden;
@@ -1178,9 +1178,9 @@ nav ul li a:hover{
         padding: 15px;
         border-radius: 4px;
       }
-      
+
     #scrollTop:hover {
-        background-color: #555;
+        background-color: red;
       }
 
     nav{
@@ -1304,7 +1304,7 @@ nav ul li a:hover{
         text-decoration: none;
         padding:30px;
         text-align: center;
-        
+
     }
 
     .dropDownContent a:hover{
@@ -1335,7 +1335,7 @@ nav ul li a:hover{
         cursor: pointer;
     }
 
-    .bannerHead{    
+    .bannerHead{
         height: 100vh;
         width:100vw;
         background:#595959;
@@ -1381,7 +1381,7 @@ nav ul li a:hover{
         color:#595959;
         cursor: pointer;
     }
-    
+
     .feature{
         height: 730px;
         width:100%;
@@ -1400,13 +1400,13 @@ nav ul li a:hover{
         margin-left: auto;
         margin-right: auto;
         padding-top: 60px;
-        
+
     }
 
     .featureProducts{
         display: grid;
         grid-template-columns: auto auto auto auto;
-        
+
     }
 
     .featureProducts  img{
@@ -1415,7 +1415,7 @@ nav ul li a:hover{
         width:75%;
         padding:25px;
     }
-    
+
     .shopBanner{
         width:100%;
         height:380px;
@@ -1516,8 +1516,8 @@ nav ul li a:hover{
     .furnitureImages:hover .staticImage {
         filter: grayscale(40%) blur(1px);
     }
-    
-    
+
+
     #Lighting{
         letter-spacing: 13px;
     }
