--- a/Raul/templates/Raul/cart.html
+++ b/Raul/templates/Raul/cart.html
@@ -40,12 +40,13 @@
                                                         <div class="product-info">
                                                             <div>Display: <span class="value">studded vase ${{item.product.price}}
 																	Metal Vase Bronze 5 H x 5 W</span></div>
-                                                            <div> <span class="value">{{item.notes}}</span></div>
+                                                            <div> <span class="value">{{item.variation.all}}</span></div>
                                                         </div>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-4 quantity">
-                                                    <form class= 'form pull-right' method='GET' action="{% url 'update_cart' item.product.slug %}">
+                                                    <form class= 'form pull-right' method='POST' action="{% url 'update_cart' item.product.slug %}">
+                                                        {% csrf_token %}
                                                         <input name='qty' type='number' placeholder={{item.quantity}} value='{{item.quantity}}' />
                                                         <input type='submit' value='update cart' />
                                                     </form>
