--- a/orders/templates/orders/Checkout.html
+++ b/orders/templates/orders/Checkout.html
@@ -8,6 +8,26 @@
 </head>
 <style type="text/css">
 
+    #scrollTop {
+        display: none;
+        position: fixed;
+        bottom: 20px;
+        right: 30px;
+        z-index: 99;
+        font-size: 18px;
+        border: none;
+        outline: none;
+        background-color: red;
+        color: white;
+        cursor: pointer;
+        padding: 15px;
+        border-radius: 4px;
+    }
+
+    #scrollTop:hover {
+        background-color: #555;
+    }
+
     /**
  * The CSS shown here will not be introduced in the Quickstart guide, but shows
  * how you can use CSS to style your Element's container.
@@ -46,7 +66,7 @@
 <script src="https://js.stripe.com/v3/"></script>
 
 {% if address_form %}
-<body class='col-sm-6 oull-right'>
+<body class='col-sm-6 pull-right'>
 
     <h3>Add New Shipping Address</h3>
     <form method="POST" action='{% url "ajax_add_user_address" %}?next=checkout'>{% csrf_token %}
@@ -54,8 +74,8 @@
 
         <input type="submit" class="btn btn-default" value="Add Shipping Address"/>
 
-        <body>
-        <script src="https://js.stripe.com/v3/"></script>
+
+        <script src= "https://js.stripe.com/v3/" ></script>
 
         <form action="." method="post" id="payment-form">
             {% csrf_token %}
@@ -115,6 +135,8 @@
             {% endfor %}
         </div>
         {% endif %}
+
+        <button onclick="scrollFunction()" id="scrollTop"> Top </button>
 
     <div class="form-row">
         <label for="card-element">
@@ -205,6 +227,24 @@
 
         // Submit the form
         form.submit();
+    }
+
+
+    const mybutton = document.getElementById("scrollTop");
+
+    window.onscroll = function() {scrollFunction()};
+
+    function scrollFunction() {
+        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+            mybutton.style.display = "block";
+        } else {
+            mybutton.style.display = "none";
+        }
+    }
+
+    function topFunction() {
+        document.body.scrollTop = 0;
+        document.documentElement.scrollTop = 0;
     }
 
 </script>
